@@ -3,7 +3,6 @@ package dev.ai4j.openai4j;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.URI;
-import java.net.URL;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
@@ -18,7 +17,7 @@ class FilePersistor {
         try {
             Path fileName = Paths.get(uri.getPath()).getFileName();
             Path destinationFilePath = destinationFolder.resolve(fileName);
-            try (InputStream inputStream = new URL(uri.toString()).openStream()) {
+            try (InputStream inputStream = uri.toURL().openStream()) {
                 java.nio.file.Files.copy(inputStream, destinationFilePath, StandardCopyOption.REPLACE_EXISTING);
             }
 
